[package]
name = "x64wars"
version = "0.1.0"
authors = ["Jacob Hughes <j@jacobhughes.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kvm-ioctls = "0.4"
kvm-bindings = "0.2"
memmap = "0.7"
rand = "0.7"
x86 = "0.28"
x86_64 = "0.8"
goblin = "0.1"
crossbeam = "0.7"
clap = "^2"
